# -alpha60-data-platform

./: .env.example  Dockerfile  pyproject.toml
.github/workflows/: ci.yml
dbt/alpha60/: dbt_project.yml
dbt/alpha60/models/marts/: dim_customers.sql  dim_locations.sql  dim_products.sql  fact_daily_sales.sql  fact_inventory_snapshot.sql  (+9 more)
docs/: architecture.md
docs/adr/: 0001-health-check-strategy.md
src/alpha60/: cli.py
src/alpha60/config/: __init__.py  bigquery.py  settings.py  shopify.py
src/alpha60/core/: exceptions.py  logging.py
src/alpha60/jobs/: shopify_orders_runner.py  shopify_products.py  shopify_products_runner.py
src/alpha60/operations/: health.py
src/alpha60/pipelines/: daily_refresh.py
src/alpha60/transformations/: pipeline.py  result.py  shopify_customers.py  shopify_customers_runner.py  shopify_orders.py  shopify_pipeline.py  shopify_product_variants.py  shopify_product_variants_runner.py
src/alpha60/warehouse/: loader.py  types.py
tests/unit/: test_cli.py  test_daily_refresh_pipeline.py  test_exceptions.py  test_logging.py  test_settings.py  test_shopify_orders_runner.py  test_shopify_products_job.py  test_shopify_products_runner.py
tests/unit/core/: test_base_connector.py  test_foundation.py  test_http_client.py  test_http_retry.py  test_record.py
tests/unit/operations/: test_health.py
tests/unit/shopify/: test_shopify_auth.py  test_shopify_client.py
tests/unit/transformations/: test_pipeline.py  test_shopify_order_lines.py  test_shopify_orders.py  test_shopify_product_variants.py  test_shopify_product_variants_runner.py
(+21 files in other folders)
