[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alpha60-data-platform"
version = "0.1.0"
description = "ALPHA60 operational data platform"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "dbt-bigquery>=1.11.3",
    "google-cloud-bigquery",
    "google-cloud-secret-manager",
    "httpx>=0.28.1",
    "pydantic",
    "pydantic-settings",
    "requests",
]

[project.scripts]
alpha60 = "alpha60.cli:main"

[dependency-groups]
dev = [
    "hatchling",
    "mypy",
    "pre-commit",
    "pytest",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/alpha60"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
